reformat code (automated)